# fastapi-base-template

./: README.md  main.py  pyproject.toml
src/api/: deps.py
src/api/v1/: routes.py
src/api/v1/endpoints/: items.py  users.py
src/core/: config.py
src/crud/: user.py
src/database/: session.py
src/models/: base.py  user.py
src/repositories/: db_session.py
