[project]
name = "fastapi-base-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "inflect>=7.5.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
